--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <button id="prevButton" onclick="prevQuestion()" style="display:none">Previous</button>
         <button id="nextButton" onclick="nextQuestion()">Next</button>
         <button id="submitButton" onclick="submitQuiz()" style="display:none">Submit</button>
+
+
+        <div id="modal" class="modal">
+            <div class="modal-content">
+              <p id="modal-text"></p>
+              <button id="modal-yes">Yes</button>
+              <button id="modal-no">No</button>
+            </div>
+        </div>
     
     </main>
     
