added a pass and fail percentage when quiz is submitted

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz-ap</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
             </div>
 
 
-            <div class="btns">
+            <div id="btns">
                 <button id="prevButton" onclick="prevQuestion()">Previous</button>
                 <button id="nextButton" onclick="nextQuestion()">Next</button>
                 <button id="submitButton" onclick="submitQuiz()">Submit</button>
