added confetti to a perfect score

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
             <div id="modal" class="modal">
                 <div class="modal-content">
                   <p id="modal-text"></p>
-                  <button id="modal-yes">Yes</button>
-                  <button id="modal-no">No</button>
+                  <button id="modal-yes" onclick="modalYes()">Yes</button>
+                  <button id="modal-no" onclick="modalNo()">No</button>
                 </div>
             </div>
+
+
+            <img id="gif" src="giphy.gif" alt="">
 
 
         </div>
